<?xml version="1.0" encoding="utf-8"?><!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">Ai-D Reader</string>
    <string name="label_models">ML Model</string>
    <string name="detection_model1">detection_kit.tflite</string>
    <string name="detection_model2">detection_box.tflite"</string>
    <string name="regression_model">regression_bovine.tflite"</string>
    <string name="product_1">AniCheck-BIgG</string>
    <string name="product_2">ImmuneCheck-IgE</string>
    <string name="product_3">ImmuneCheck-IgG</string>
    <string name="back_button">Back</string>
    <string name="export_button">EXPORT</string>
    <string name="clear_button">CLEAR</string>
    <string name="capture_kit">CAPTURE\nKIT</string>
    <string name="button_QR">SCAN QR</string>
    <string name="no_calibration_guide" color="red">NO CALIBRATION FILE</string>


    <string name="history_section_name">HISTORY</string>
    <string name="welcome_to">Welcome to</string>
    <string name="current_product">Product</string>
    <string name="current_lot">Lot No.</string>
    <string name="label_result">Result</string>
    <string name="label_reference">Reference</string>

    <string name="msg_analysis_complete">Analysis Complete</string>
    <string name="msg_sample_result">20mg/ml</string>
    <string name="label_info">About ProteomeTech</string>

    <string name="description_reference">Visual inspection reference card</string>
    <string name="description_back">Back button</string>
    <string name="description_sample_result_image">Result Image Sample</string>
    <string name="description_app_logo">App logo</string>
    <string name="description_information">information</string>

    <string-array name="products">
        <item>Bovine IgG</item>
        <item>ImmuneCheck IgE</item>
        <item>ImmuneCheck IgG</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_sign_in"><u>Sign in</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string-array name="models_spinner_titles">-->
    <!--        <item>MobileNet V1</item>-->
    <!--        <item>EfficientDet Lite0</item>-->
    <!--        <item>EfficientDet Lite1</item>-->
    <!--        <item>EfficientDet Lite2</item>-->
    <!--    </string-array>-->
</resources>
