<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version 1.4.0"
        android:layout_gravity="right"
        android:padding="10dp"
        android:textColor="#66777575"
        />

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/description_app_logo"
        android:src="@drawable/main_image"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_rectangle_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_kit_info"
            android:textSize="24dp"
            android:textColor="#767171"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:src="@drawable/circle_gray"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/labelProductName"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Product"
                    android:textColor="#A6A6A6"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/loginProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_product"
                    android:textColor="#A6A6A6"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:src="@drawable/circle_gray"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/labelLotNum"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/current_lot"
                    android:textColor="#A6A6A6"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/loginLotNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_lot"
                    android:textColor="#A6A6A6"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>

    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:src="@drawable/focus_ic"
        android:background="@drawable/rounded_rectangle_lightgreen"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
    </ImageButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <ImageButton
            android:id="@+id/examineHistoryButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/file_ic"
            android:background="@drawable/rounded_rectangle_lightgreen"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/kitListButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="SELECT KIT"
            android:background="@drawable/rounded_rectangle_lightgreen"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/scanQRButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/qr_ic"
            android:background="@drawable/rounded_rectangle_lightgreen"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

    <LinearLayout
        android:id="@+id/loginBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#f0f3fa"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/description_information"
            android:src="@drawable/info_icon" />

        <TextView
            android:id="@+id/goToHomepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_info"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>